--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,5 @@
 CONNECTION_URL=mongodb+srv://hasannuruzade:<password>@cluster0.gzcahit.mongodb.net/?retryWrites=true&w=majority
 PASSWORD=hasan123
 PORT=5000
+email=h.nuruzade@gmail.com
+pass=bcvbjuqopmvfttdv
